[package]
name = "port-scan"
version = "0.1.0"
edition = "2021"
description = "A TCP/UDP port scanner in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
pnet = "0.34.0" # For raw sockets (requires Npcap/WinPcap or root)
socket2 = { version = "0.5", features = ["all"] } # For fine-tuning sockets if needed
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
mime_guess = "2.0"
