[package]
name = "port-scan"
version = "1.4.3"
edition = "2021"
authors = ["RFKaya"]
description = "A high-performance, asynchronous TCP/UDP port scanner with a modern Web UI."
readme = "README.txt"
repository = "https://github.com/RFKaya/Port-Scanner"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
pnet = "0.34.0" # For raw sockets (requires Npcap/WinPcap or root)
socket2 = { version = "0.5", features = ["all"] } # For fine-tuning sockets if needed
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
mime_guess = "2.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }

# --- Release Optimizasyonları ---
[profile.release]
opt-level = 3        # En yüksek performans için (0-3 arası)
lto = "fat"          # Link Time Optimization: Tüm binary çapında derin analiz yaparak kodu hızlandırır
codegen-units = 1    # Derleme daha yavaş olur ama sonuçlanan binary çok daha küçük ve hızlı olur
panic = "abort"      # Hata olduğunda stack'i temizleme (unwind) yerine doğrudan durur, binary'i küçültür
strip = "symbols"    # Gereksiz debug sembollerini temizler (Boyut %50'ye kadar düşebilir)
